# Garage

./: .gitignore  .gitmodules
DotFiles/_emacs.d/lisp/: init-chxin.el
configurations/: dotfiles.org
configurations/_emacs.d/: spacemacs
configurations/_emacs.d/lisp/: init-chxin.el  init-latex.el  init-pdf.el
log/: org-tutorial.org
log/gtd/: gtd.org  inbox.org  memo.org  wpi.org
template/cpp/cmake-examples/01-basic/B-hello-headers/: .clang_complete
template/cpp/cmake-examples/01-basic/E-installing/: README.adoc
template/cpp/cpp-demo/: .dir-locals.el  CMakeLists.txt
template/cpp/cpp-demo/include/google-test/: CMakeLists.txt
template/cpp/cpp-unit/: CMakeLists.txt  README.org
template/cpp/cpp-unit/include/: utils.h
template/cpp/cpp-unit/src/: main.cpp  utils.cpp
template/cpp/cpp-unit/test/: CMakeLists.txt  main.cpp  utils_test.cpp
template/hdl/verilog/: README.org  counter.v  demo.tcl  hello-world-tb.v  hello-world-tb.vcd  hello-world.vvp  makefile  run-verilog.sh  singal-view.tcl  test-bench.v
template/mcu/stm32-demo/: .gitignore  Makefile  Makefile-in-one  README.org  makefile_rules.mk
template/mcu/stm32-demo/hardware/: main.c  makefile_hardware.mk
template/mcu/stm32-demo/libraries/: makefile_std_lib.mk
template/mcu/stm32-demo/libraries/CMSIS/CM3/CoreSupport/: core_cm3.c
template/org-css/: index.org
